# sars-cov-2-mutation-lm

./: pyproject.toml
data/: uncommon_mutations_data.csv  unique_mutations.pkl
src/sars_cov_2_uncommon_mutations/: __init__.py  get_mutations.py  main.py  model.py  train.py
